# Dashboard_Clinico

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  _pdf_extracted.txt  _pdf_requirements.txt  compose.yml  dockerfile
backend/: .dockerignore  CMakeLists.txt  README.md  consultas.csv  dataset_generator.cpp  diagnosticos.csv  main_backend.cpp  pacientes.csv
backend/algorithms/: searching.cpp  searching.h  sorting.cpp  sorting.h
backend/models/: Consulta.h  Diagnostico.h  Paciente.h
backend/performance/: benchmark.cpp  benchmark.h
backend/services/: arbol_diagnosticos.cpp  arbol_diagnosticos.h  busquedas.cpp  busquedas.h  cola_pacientes.cpp  cola_pacientes.h
docker/backend/: Dockerfile  compose.yml
docker/backend/envs/: .env.dev  .env.prod
docker/frontend/: Dockerfile  compose.yml  nginx.conf
docs/: CUMPLIMIENTO_PDF.md  DECISIONES_TECNICAS.md
frontend/: README.md  index.html  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: Badge.tsx  ExpedientePanel.tsx  GlassModal.tsx  GlassToast.tsx  PrimaryCard.tsx  RightPanel.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/app/pages/: Busqueda.tsx  Consultar.tsx  Dashboard.tsx  Diagnostico.tsx  Expedientes.tsx  Registro.tsx  Rendimiento.tsx
frontend/src/data/: mockData.ts
frontend/src/imports/: clinic-dashboard-metaprompt.md  clinical-dashboard-widgets.md  global-dashboard-frame.css
frontend/src/lib/: api.ts  expediente.ts
frontend/src/styles/: index.css  theme.css
